--- a/src/components/WebMentions.astro
+++ b/src/components/WebMentions.astro
@@ -91,7 +91,12 @@ const showDate = (webmention: string) =>
 				</div>
 				<ul>
 					{webmentions.map((webmention: WebmentionProps) => (
-						<li style='align-items: center;' itemscope itemtype='http://schema.org/Comment'>
+						<li
+							aria-label='Comment'
+							style='align-items: center;'
+							itemscope
+							itemtype='http://schema.org/Comment'
+						>
 							<small>
 								<time
 									itemprop='datePublished'
