--- a/src/pages/amp/blog.astro
+++ b/src/pages/amp/blog.astro
@@ -1,10 +1,10 @@
 ---
+import gregImg from '@/assets/images/greg.jpeg'
 import ListCategories from '@/components/ListCategories'
 import ListPosts from '@/components/ListPosts'
 import AmpLayout from '@/layouts/AmpLayout'
 import { Picture } from 'astro:assets'
 import { getCollection } from 'astro:content'
-import gregImg from '../assets/images/greg.jpeg'
 const MAX_POSTS = 1005 // max number of posts to show on the home page
 const allPosts = await getCollection('blog')
 const posts = allPosts.slice(0, MAX_POSTS)
