--- a/src/components/AmpHead.astro
+++ b/src/components/AmpHead.astro
@@ -26,8 +26,6 @@ const siteTitle = `${title} ${titleSeparator} ${siteConfig.title}`
 
 const username = 'jswhisperer'
 
-import { AstroFont } from 'astro-font'
-import { join } from 'path'
 const atomFeed = '/atom.xml'
 ---
 
@@ -120,7 +118,7 @@ const atomFeed = '/atom.xml'
 	@import url('/styles/global.css');
 </style> -->
 
-<AstroFont
+<!-- <AstroFont
 	config={[
 		{
 			preload: true,
@@ -192,4 +190,4 @@ const atomFeed = '/atom.xml'
 			]
 		}
 	]}
-/>
+/> -->
