--- a/src/layouts/AmpLayout.astro
+++ b/src/layouts/AmpLayout.astro
@@ -1,6 +1,5 @@
 ---
 import AmpHead from '@/components/AmpHead'
-import Footer from '@/components/Footer'
 import NewHeader from '@/components/Header'
 import ProviderAnimations from '@/components/ProviderAnimations'
 import ProviderTheme from '@/components/ProviderTheme'
@@ -109,7 +108,7 @@ const structuredData = {
 			<TwSizeIndicator />
 			<EditBlog />
 
-			<Footer />
+			<!-- <Footer /> -->
 			<style>
 				#body,
 				html,
