--- a/src/layouts/AmpLayout.astro
+++ b/src/layouts/AmpLayout.astro
@@ -1,6 +1,6 @@
 ---
 import AmpHead from '@/components/AmpHead'
-import NewHeader from '@/components/Header'
+import NewHeader from '@/components/AmpHeader'
 import ProviderAnimations from '@/components/ProviderAnimations'
 import ProviderTheme from '@/components/ProviderTheme'
 import TwSizeIndicator from '@/components/TwSizeIndicator'
