--- a/src/layouts/AmpLayout.astro
+++ b/src/layouts/AmpLayout.astro
@@ -27,7 +27,7 @@ const structuredData = {
 	<meta charset='utf-8' />
 	<Head>
 		<head>
-			<script async src='https://cdn.ampproject.org/v0.js'></script>
+			<script is:raw async src='https://cdn.ampproject.org/v0.js'></script>
 			<meta name='viewport' content='width=device-width, initial-scale=1' />
 			<AmpHead title={title} description={description} ogImage={image} articleDate={articleDate} />
 			<ProviderTheme />
