--- a/src/layouts/AmpLayout.astro
+++ b/src/layouts/AmpLayout.astro
@@ -79,8 +79,8 @@ const structuredData = {
 				visibility: visible;
 			}
 		}
-	</style><noscript
-		><style amp-boilerplate>
+	</style><noscript>
+		<style amp-boilerplate>
 			body {
 				-webkit-animation: none;
 				-moz-animation: none;
@@ -89,7 +89,6 @@ const structuredData = {
 			}
 		</style></noscript
 	>
-
 
 	<body id='body' itemscope itemtype='http://schema.org/WebPage'>
 		<!-- <Header /> -->
@@ -171,6 +170,5 @@ const structuredData = {
 				}
 			</style>
 		</main>
-
 	</body>
 </html>
