--- a/src/layouts/AmpLayout.astro
+++ b/src/layouts/AmpLayout.astro
@@ -23,7 +23,7 @@ const structuredData = {
 <html ⚡ lang='en'>
 	<meta charset='utf-8' />
 
-	<script is:raw async src='https://cdn.ampproject.org/v0.js'></script>
+	<script is:inline async src='https://cdn.ampproject.org/v0.js'></script>
 	<meta name='viewport' content='width=device-width, initial-scale=1' />
 	<AmpHead title={title} description={description} ogImage={image} articleDate={articleDate} />
 
@@ -79,16 +79,7 @@ const structuredData = {
 				visibility: visible;
 			}
 		}
-	</style><noscript>
-		<style amp-boilerplate>
-			body {
-				-webkit-animation: none;
-				-moz-animation: none;
-				-ms-animation: none;
-				animation: none;
-			}
-		</style></noscript
-	>
+	</style>
 
 	<body id='body' itemscope itemtype='http://schema.org/WebPage'>
 		<!-- <Header /> -->
