--- a/src/layouts/AmpLayout.astro
+++ b/src/layouts/AmpLayout.astro
@@ -32,7 +32,7 @@ const structuredData = {
 			color: red;
 		}
 	</style>
-	<style amp-boilerplate>
+	<style is:inline amp-boilerplate>
 		body {
 			-webkit-animation: -amp-start 8s steps(1, end) 0s 1 normal both;
 			-moz-animation: -amp-start 8s steps(1, end) 0s 1 normal both;
