--- a/src/layouts/AmpLayout.astro
+++ b/src/layouts/AmpLayout.astro
@@ -20,7 +20,7 @@ const structuredData = {
 }
 ---
 
-<html ⚡ lang='en'>
+<html amp>
 	<meta charset='utf-8' />
 
 	<script is:inline async src='https://cdn.ampproject.org/v0.js'></script>
