--- a/src/pages/amp/blog.astro
+++ b/src/pages/amp/blog.astro
@@ -21,7 +21,7 @@ const posts = allPosts.slice(0, MAX_POSTS)
 			width={gregImg.width}
 			height={gregImg.height}
 			inferSize={true}
-			src={gregImg.src}
+			src={gregImg}
 			alt='Gregory Benner'
 			layout='responsive'
 			loading={'eager'}
