--- a/src/layouts/AmpLayout.astro
+++ b/src/layouts/AmpLayout.astro
@@ -26,7 +26,7 @@ const structuredData = {
 	<script is:inline async src='https://cdn.ampproject.org/v0.js'></script>
 
 	<AmpHead title={title} description={description} ogImage={image} articleDate={articleDate} />
-
+	<!-- test 1 -->
 	<style amp-custom>
 		#body,
 		html,
@@ -94,6 +94,7 @@ const structuredData = {
 			display: none;
 		}
 	</style>
+	<!-- test 2 -->
 	<style amp-boilerplate=''>
 		body {
 			-webkit-animation: -amp-start 8s steps(1, end) 0s 1 normal both;
