--- a/src/components/NewHeader.astro
+++ b/src/components/NewHeader.astro
@@ -70,7 +70,7 @@
 </div>
 <span class='main-content-shadow'></span>
 
-<style media='none' onload="if(media!='all') media='all'">
+<style amp-custom>
 	span {
 		margin: 0;
 		padding: 0;
