--- a/src/components/NewHeader.astro
+++ b/src/components/NewHeader.astro
@@ -70,7 +70,7 @@
 </div>
 <span class='main-content-shadow'></span>
 
-<style amp-custom>
+<style is:inline amp-custom>
 	span {
 		margin: 0;
 		padding: 0;
