--- a/src/pages/work.astro
+++ b/src/pages/work.astro
@@ -281,7 +281,7 @@ import simapro from '@/assets/images/portfolio/simapro.jpg'
 	}, 5000)
 </script>
 
-<style>
+<style is:inline>
 	div,
 	span,
 	h2,
