--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -123,7 +123,7 @@ const atomFeed = '/atom.xml'
 	integrity='sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=='
 	crossorigin='anonymous'></script> -->
 
-<style is:global>
+<style is:inline>
 	@import url('/styles/global.css');
 </style>
 
