--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -41,7 +41,7 @@ const today = new Date()
 	</div>
 </footer>
 
-<style>
+<style is:inline>
 	/*! CSS Used from: https://gregbenner-classic-2009.netlify.app/stylesheets/mini.min.crush.css */
 	div,
 	span,
