--- a/src/components/LinkUnderline.astro
+++ b/src/components/LinkUnderline.astro
@@ -19,7 +19,7 @@ const { link, href, underlinecolor, strokewidth } = Astro.props
 			</svg>
 		</span>
 	</a>
-	<style define:vars={{ underlinecolor, strokewidth }}>
+	<style is:inline define:vars={{ underlinecolor, strokewidth }}>
 		/*! CSS Used from: https://tympanus.net/Development/LineHoverStyles/css/base.css */
 		*,
 		*::after,
