--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -2,7 +2,7 @@
 import BaseHead from '@/components/BaseHead'
 import Footer from '@/components/Footer'
 import NewHeader from '@/components/Header'
-import ProviderAnimations from '@/components/ProviderAnimations'
+// import ProviderAnimations from '@/components/ProviderAnimations'
 import ProviderTheme from '@/components/ProviderTheme'
 import TwSizeIndicator from '@/components/TwSizeIndicator'
 import EditBlog from '@/components/editBlog'
@@ -30,8 +30,8 @@ const structuredData = {
 		<head>
 			<meta name='viewport' content='width=device-width, initial-scale=1' />
 			<BaseHead title={title} description={description} ogImage={image} articleDate={articleDate} />
-			<ProviderTheme />
-			<ProviderAnimations />
+			<!-- <ProviderTheme />
+			<ProviderAnimations /> -->
 		</head>
 	</Head>
 
