--- a/src/components/NewHeader.astro
+++ b/src/components/NewHeader.astro
@@ -69,7 +69,7 @@
 	<span class='shadow-up'></span>
 </div>
 <span class='main-content-shadow'></span>
-
+<!-- 
 <style is:inline amp-custom>
 	span {
 		margin: 0;
@@ -516,4 +516,4 @@
 	* {
 		position: relative;
 	}
-</style>
+</style> -->
