--- a/src/components/AmpHead.astro
+++ b/src/components/AmpHead.astro
@@ -50,7 +50,7 @@ const atomFeed = '/atom.xml'
 	].map((social) => <link rel='me' href={social + '/'} />)
 }
 <!-- Canonical URL -->
-<!-- <link rel='canonical' href={canonicalURL.toString().replace('/amp', '')} /> -->
+<link rel='canonical' href={canonicalURL.toString().replace('/amp', '')} />
 
 {pwaInfo && <Fragment set:html={pwaInfo.webManifest.linkTag} />}
 
