--- a/src/components/AmpHead.astro
+++ b/src/components/AmpHead.astro
@@ -96,7 +96,7 @@ const atomFeed = '/atom.xml'
 	}
 </style>
 <!-- test 2 -->
-<style is:inline amp-boilerplate=''>
+<style is:raw amp-boilerplate>
 	body {
 		-webkit-animation: -amp-start 8s steps(1, end) 0s 1 normal both;
 		-moz-animation: -amp-start 8s steps(1, end) 0s 1 normal both;
@@ -144,7 +144,7 @@ const atomFeed = '/atom.xml'
 		}
 	}
 </style><noscript
-	><style is:inline amp-boilerplate=''>
+	><style is:raw amp-boilerplate>
 		body {
 			-webkit-animation: none;
 			-moz-animation: none;
