--- a/src/components/AmpHead.astro
+++ b/src/components/AmpHead.astro
@@ -178,7 +178,7 @@ const atomFeed = '/atom.xml'
 <!-- Canonical URL -->
 <link rel='canonical' href={canonicalURL.toString().replace('/amp', '')} />
 
-{pwaInfo && <Fragment set:html={pwaInfo.webManifest.linkTag} />}
+<!-- {pwaInfo && <Fragment set:html={pwaInfo.webManifest.linkTag} />} -->
 
 <!-- Primary Meta Tags -->
 <title>{siteTitle}</title>
