--- a/src/components/AmpHead.astro
+++ b/src/components/AmpHead.astro
@@ -95,7 +95,7 @@ const atomFeed = '/atom.xml'
 		display: none;
 	}
 </style>
-<!-- test 2 -->
+
 <style is:raw amp-boilerplate>
 	body {
 		-webkit-animation: -amp-start 8s steps(1, end) 0s 1 normal both;
@@ -144,6 +144,17 @@ const atomFeed = '/atom.xml'
 		}
 	}
 </style><noscript
+	><style amp-boilerplate>
+		body {
+			-webkit-animation: none;
+			-moz-animation: none;
+			-ms-animation: none;
+			animation: none;
+		}
+	</style></noscript
+>
+
+<noscript
 	><style is:raw amp-boilerplate>
 		body {
 			-webkit-animation: none;
