--- a/src/components/WebMentions.astro
+++ b/src/components/WebMentions.astro
@@ -6,7 +6,7 @@ import sanitizeHTML from 'sanitize-html'
 
 const theUrl = Astro.url
 
-const sanitize = (entry: { content: any }) => {
+const sanitize = (entry: { content: { value: string; 'content-type'?: string } }) => {
 	const { content } = entry
 	//if (content['content-type'] === 'text/html') {
 	content.value = sanitizeHTML(content.value)
@@ -24,7 +24,11 @@ interface WebmentionProps {
 	author: AuthorProps
 	'wm-received': string
 	'wm-property': string
-	content: any
+	content: {
+		text?: string
+		value?: string
+		'content-type'?: string
+	}
 }
 
 interface Props {
@@ -44,56 +48,25 @@ const showDate = (webmention: string) =>
 {
 	webmentions.length ? (
 		<>
-			{/* <span itemprop='commentCount'>{webmentions.length}</span> */}
-
-			<section
-				aria-label='Webmentions'
-				itemtype='https://schema.org/DiscussionForumPosting'
-				itemscope
-			>
+			<section aria-label='Webmentions' itemscope itemtype='https://schema.org/ItemList'>
+				<meta itemprop='mainEntityOfPage' content={theUrl} />
+				<meta itemprop='url' content={theUrl} />
 				<div
 					itemprop='interactionStatistic'
 					itemscope
 					itemtype='https://schema.org/InteractionCounter'
 				>
-					<span itemprop='userInteractionCount'>{webmentions.length}</span>{' '}
-					<span itemprop='interactionType' content='https://schema.org/LikeAction'>
-						likes
-					</span>
+					<span itemprop='userInteractionCount'>{webmentions.length}</span>
 				</div>
-				<meta itemprop='mainEntityOfPage' content={theUrl} />
-				<meta itemprop='url' content={theUrl} />
-				<time itemprop='datePublished' datetime='2025-01-24T10:15:16Z' data-astro-cid-qesbhxo5>
-					January 24, 2025
-				</time>
+				<span itemprop='commentCount'>{webmentions.length}</span>
 				<h2 id='webmentions' itemprop='headline'>
 					Webmentions
 				</h2>
-
 				<span itemprop='text'>lorem ipsum</span>
-				<div
-					itemprop='author'
-					itemscope
-					itemtype='https://schema.org/Person'
-					class='avatar-and-author author u-author h-card'
-				>
-					<div itemprop='name'>greg</div>
-					<a itemprop='url' href='https://jswhisperer.uk/author/greg' aria-label='author url'>
-						{/* {webmention?.author?.photo && (
-										<Picture
-											alt={webmention.author.name}
-											width={authorphoto.width}
-											height={authorphoto.height}
-											src={authorphoto.src}
-											fit='cover'
-										/>
-									)} */}
-					</a>
-				</div>
-
-				<ul itemscope itemtype='https://schema.org/CreativeWork'>
+				<ul itemprop='itemListElement'>
 					{webmentions.map((webmention: WebmentionProps) => (
 						<li
+							itemprop='comment'
 							aria-label='Comment'
 							style='align-items: center;'
 							itemscope
